@@ -740,6 +740,24 @@ name|_TestUtil
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|codecs
+operator|.
+name|preflexrw
+operator|.
+name|PreFlexRWCodec
+import|;
+end_import
+
 begin_class
 DECL|class|TestIndexWriter
 specifier|public
@@ -12216,6 +12234,109 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// LUCENE-3183
+DECL|method|testEmptyFieldNameTIIOne
+specifier|public
+name|void
+name|testEmptyFieldNameTIIOne
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|iwc
+operator|.
+name|setTermIndexInterval
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|iwc
+operator|.
+name|setReaderTermsIndexDivisor
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newField
+argument_list|(
+literal|""
+argument_list|,
+literal|"a b c"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
 operator|.
 name|close
 argument_list|()
